Overflow Y Fix

--- a/src/components/BackGroundAnimation/BackGroundAnimation.css
+++ b/src/components/BackGroundAnimation/BackGroundAnimation.css
@@ -3,7 +3,7 @@ body {
   animation: gradient 20s infinite;
   background-size: 200% 200%;
   background-attachment: fixed;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 @keyframes gradient {
